--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ altgraph==0.17.3
 auto-py-to-exe==2.26.0
 bottle==0.12.23
 bottle-websocket==0.2.9
+cachetools==5.2.0
 cffi==1.15.1
 Eel==0.14.0
 future==0.18.2
