--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,78 @@
+absl-py==1.3.0
 altgraph==0.17.3
+astunparse==1.6.3
 auto-py-to-exe==2.26.0
+beautifulsoup4==4.11.1
 bottle==0.12.23
 bottle-websocket==0.2.9
 cachetools==5.2.0
+certifi==2022.12.7
 cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
 Eel==0.14.0
+filelock==3.8.2
+fire==0.5.0
+Flask==2.2.2
+flatbuffers==22.12.6
 future==0.18.2
+gast==0.4.0
+gdown==4.6.0
 gevent==22.10.2
 gevent-websocket==0.10.1
+google-auth==2.15.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
 greenlet==2.0.1
+grpcio==1.51.1
+h5py==3.7.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+keras==2.11.0
+libclang==14.0.6
+Markdown==3.4.1
+MarkupSafe==2.1.1
+mtcnn==0.1.1
 numpy==1.23.5
+oauthlib==3.2.2
 opencv-python==4.6.0.66
+opt-einsum==3.3.0
+packaging==22.0
+pandas==1.5.2
 pefile==2022.5.30
 Pillow==9.3.0
+protobuf==3.19.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 pyinstaller==5.7.0
 pyinstaller-hooks-contrib==2022.14
 pyparsing==3.0.9
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2022.6
 pywin32-ctypes==0.2.0
-pyzbar==0.1.9
+requests==2.28.1
+requests-oauthlib==1.3.1
+retina-face==0.0.12
+rsa==4.9
+six==1.16.0
+soupsieve==2.3.2.post1
+tensorboard==2.11.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.11.0
+tensorflow-estimator==2.11.0
+tensorflow-intel==2.11.0
+tensorflow-io-gcs-filesystem==0.28.0
+termcolor==2.1.1
+tqdm==4.64.1
+typing_extensions==4.4.0
+urllib3==1.26.13
+Werkzeug==2.2.2
 whichcraft==0.6.1
+wrapt==1.14.1
 zope.event==4.5.0
 zope.interface==5.5.2
